removed resolvers imporved error handling added lazy loading.

--- a/src/app/components/certificate/certificate.component.html
+++ b/src/app/components/certificate/certificate.component.html
@@ -18,7 +18,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-8" *ngIf="certificateDetail1">
       <form [formGroup]="certificateDetail1">
         <app-errors></app-errors>
         <mat-error *ngIf="!usersSelected">Please select recipients to generate certificates!</mat-error>
