--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,9 +5,10 @@
     <div class="col-md-4">
       <app-errors></app-errors>
       <mat-card>
-
         <div class="top-left-text">
-          <div id="total-recipients"></div>
+          <div id="total-recipients">
+            <img [src]="icons[0]" alt="icon">
+          </div>
         </div>
         <div class="card-text">
           <div class="number-text">
@@ -17,16 +18,13 @@
           <h5> Total number of recipients</h5>
         </div>
       </mat-card>
-
-
     </div>
     <div class="col-md-4">
-
       <mat-card>
-
         <div class="top-left-text">
-          <div id="total-certificates"></div>
-
+          <div id="total-certificates">
+            <img [src]="icons[1]" alt="icon">
+          </div>
         </div>
         <div class="card-text">
           <div class="number-text">
@@ -36,15 +34,14 @@
           <h5> Total certificates released</h5>
         </div>
       </mat-card>
-
-
     </div>
+
     <div class="col-md-4">
-
       <mat-card>
-
         <div class="top-left-text">
-          <div id="total-emails"></div>
+          <div id="total-emails">
+            <img [src]="icons[2]" alt="icon">
+          </div>
         </div>
         <div class="card-text">
           <div class="number-text">
@@ -54,19 +51,19 @@
           <h5> Total emails sent</h5>
         </div>
       </mat-card>
-
-
     </div>
   </div>
+
   <div class="row">
     <div class="col-md-4">
-
       <mat-card>
         <div class="top-right-text">
           {{home.changeInRecipientsAddedThisMonth}}%
         </div>
         <div class="top-left-text">
-          <div id="total-recipients-this-month"></div>
+          <div id="total-recipients-this-month">
+            <img [src]="icons[3]" alt="icon">
+          </div>
         </div>
         <div class="card-text">
           <div class="number-text">
@@ -76,18 +73,17 @@
           <h5> Recipients added this month </h5>
         </div>
       </mat-card>
-
-
     </div>
 
     <div class="col-md-4">
-
       <mat-card>
         <div class="top-right-text">
           {{home.changeInCertificatesReleasedThisMonth}}%
         </div>
         <div class="top-left-text">
-          <div id="total-certificates-this-month"></div>
+          <div id="total-certificates-this-month">
+            <img [src]="icons[4]" alt="icon">
+          </div>
         </div>
         <div class="card-text">
           <div class="number-text">
@@ -97,19 +93,18 @@
           <h5> Certificates released this month</h5>
         </div>
       </mat-card>
-
-
     </div>
 
 
     <div class="col-md-4">
-
       <mat-card>
         <div class="top-right-text">
           {{home.changeInEmailSentThisMonth}}%
         </div>
         <div class="top-left-text">
-          <div id="total-emails-this-month"></div>
+          <div id="total-emails-this-month">
+            <img [src]="icons[5]" alt="icon">
+          </div>
         </div>
         <div class="card-text">
           <div class="number-text">
@@ -120,9 +115,6 @@
         </div>
       </mat-card>
 
-
     </div>
-
-
   </div>
 </div>
