--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<div class="app-content-wrapper">
+    <mat-progress-bar class="route-change-progress" *ngIf="loading" color="accent" mode="indeterminate">
+    </mat-progress-bar>
+    
+    <router-outlet></router-outlet>
+</div>
