--- a/src/app/components/recipients/recipients.component.html
+++ b/src/app/components/recipients/recipients.component.html
@@ -14,29 +14,31 @@
             <mat-form-field appearance="outline" class="textarea-wrapper">
               <mat-label>{{textAreaLegend}}</mat-label>
               <textarea #myExpandedInput formControlName="userDetails" placeholder="{{textAreaLegend}}" #filterValue
-                        matInput matTextareaAutosize matAutosizeMinRows=6 matAutosizeMaxRows=20></textarea>
+                matInput matTextareaAutosize matAutosizeMinRows=6 matAutosizeMaxRows=20></textarea>
             </mat-form-field>
 
             <small class="userDetailsError" *ngIf="usersForm.controls.userDetails.errors"
-                   [innerHtml]=usersForm.controls.userDetails.errors.value></small>
-            <span  class="userDetailWarning" *ngIf="!showWarningIfAFewFieldsAreMissing || !showWarningIfAFewFieldsAreMissing">
+              [innerHtml]=usersForm.controls.userDetails.errors.value></small>
+            <span class="userDetailWarning"
+              *ngIf="!showWarningIfAFewFieldsAreMissing || !showWarningIfAFewFieldsAreMissing">
               <p>Please make sure the details are in the same order as of the Fields. </p>
             </span>
             <span class="userDetailsError" *ngIf="showErrorIfNameOrEmailIsMissingAfterUpload">
-              <p>Looks like some of the Fields are missing. Did you make sure the names of the columns are same as the Field names? Here are the missing Fields: </p>
-              <p>  {{unMatchedHeaders.join(', ')}}</p>
+              <p>Looks like some of the Fields are missing. Did you make sure the names of the columns are same as the
+                Field names? Here are the missing Fields: </p>
+              <p> {{unMatchedHeaders.join(', ')}}</p>
             </span>
-            <span  class="userDetailWarning" *ngIf="showWarningIfAFewFieldsAreMissing">
-              <p>Looks like some of the Fields are missing. Did you make sure the names of the columns are same as the Field names? Here are the missing Fields: </p>
-              <p>  {{unMatchedHeaders.join(', ')}}</p>
+            <span class="userDetailWarning" *ngIf="showWarningIfAFewFieldsAreMissing">
+              <p>Looks like some of the Fields are missing. Did you make sure the names of the columns are same as the
+                Field names? Here are the missing Fields: </p>
+              <p> {{unMatchedHeaders.join(', ')}}</p>
             </span>
           </div>
 
           <div class="d-flex justify-content-between align-items-center flex-md-row flex-lg-row flex-column">
-
             <div class="upload-btn-container" style="float: left;">
               <input type="file" accept=".xlsx" class="btn" (change)="onFileChange($event)" id="file">
-              <label for="file" class="upload-label"><img src="{{assets_loc}}assets/upload.svg"/>Upload File</label>
+              <label for="file" class="upload-label"><img src="{{assets_loc}}assets/upload.svg" />Upload File</label>
               <span>
                 <ng-container *ngIf="selectedFileName; else elseTemplate">{{selectedFileName}}</ng-container>
                 <ng-template #elseTemplate>
@@ -49,79 +51,64 @@
               <button (click)="searchUsers1(filterValue.value)" class="btn-orange-rounded mr-4">Search</button>
               <button (click)="saveAllAndSearch(filterValue.value)" class="btn-orange-rounded">Save/Update</button>
             </div>
-
-
           </div>
-
-
         </div>
       </div>
-
     </div>
 
 
     <div *ngIf="!expandedView" class="search-area">
-
       <div class="row">
-
         <div class="col-md-8 col-lg-6 col-12 mx-md-auto mx-lg-auto mx-sm-auto mx-0 text-center">
           <div class="form-group">
-                        <textarea #myInput (ngModelChange)="changeArea()" (click)="changeArea()"
-                                  class="custom-form-control" rows="2" placeholder="Search and save"
-                                  formControlName="userDetails" #filterValue></textarea>
+            <textarea #myInput (ngModelChange)="changeArea()" (click)="changeArea()" class="custom-form-control"
+              rows="2" placeholder="Search and save" formControlName="userDetails" #filterValue></textarea>
             <small class="userDetailsError" *ngIf="usersForm.controls.userDetails.errors"
-                   [innerHtml]=usersForm.controls.userDetails.errors.value></small>
+              [innerHtml]=usersForm.controls.userDetails.errors.value></small>
           </div>
           <!-- <input type="text" class="custom-form-control" > -->
 
           <div class="upload-btn-container">
             <input type="file" accept=".xlsx" class="btn" (change)="onFileChange($event)" id="file">
-            <label for="file" class="upload-label"><img src="{{assets_loc}}assets/upload.svg"/> Upload
+            <label for="file" class="upload-label"><img src="{{assets_loc}}assets/upload.svg" /> Upload
               File</label>
             <span>
-                            <ng-container *ngIf="selectedFileName; else elseTemplate">{{selectedFileName}}
-                            </ng-container>
-                            <ng-template #elseTemplate>
-                                No file chosen
-                            </ng-template>
-                        </span>
+              <ng-container *ngIf="selectedFileName; else elseTemplate">{{selectedFileName}}
+              </ng-container>
+              <ng-template #elseTemplate>
+                No file chosen
+              </ng-template>
+            </span>
           </div>
 
           <div class="action-btn">
             <button class="btn-orange-rounded" (click)="searchUsers(filterValue.value)">Search</button>
-            <button class="btn-orange-rounded ml-4"
-                    (click)="saveAllAndSearch(filterValue.value)">Save/Update
+            <button class="btn-orange-rounded ml-4" (click)="saveAllAndSearch(filterValue.value)">Save/Update
             </button>
           </div>
-
         </div>
-
       </div>
-
-
     </div>
 
 
     <div style="margin:20px 0px">
       <div #message></div>
 
-<!--      <div class="alert alert-success" role="alert" *ngIf="tagged">-->
-<!--        Recipients are Tagged Successfully, please search the recipients to preview <span style="float: right">  <a-->
-<!--        [routerLink]="'/Tags'" routerLinkActive="active">View Tags</a></span>-->
-<!--      </div>-->
+      <!--      <div class="alert alert-success" role="alert" *ngIf="tagged">-->
+      <!--        Recipients are Tagged Successfully, please search the recipients to preview <span style="float: right">  <a-->
+      <!--        [routerLink]="'/Tags'" routerLinkActive="active">View Tags</a></span>-->
+      <!--      </div>-->
 
-<!--      <div class="alert alert-success" role="alert" *ngIf="searchResultSize">-->
-<!--        Greetings, your search request has returned {{searchResultSize}} recipients. Please find the preview below.-->
-<!--      </div>-->
-<!--      <div class="alert alert-danger" role="alert" *ngIf="showNoRecipientFound">-->
-<!--        None of the recipient is present on the server, please save the recipients first.-->
-<!--      </div>-->
+      <!--      <div class="alert alert-success" role="alert" *ngIf="searchResultSize">-->
+      <!--        Greetings, your search request has returned {{searchResultSize}} recipients. Please find the preview below.-->
+      <!--      </div>-->
+      <!--      <div class="alert alert-danger" role="alert" *ngIf="showNoRecipientFound">-->
+      <!--        None of the recipient is present on the server, please save the recipients first.-->
+      <!--      </div>-->
 
-<!--      <div class="alert alert-success" role="alert" *ngIf="isSavedOrUpdated">-->
-<!--        Recipients are Saved/Updated Successfully, please do search to preview.-->
-<!--      </div>-->
-
-
+      <!--      <div class="alert alert-success" role="alert" *ngIf="isSavedOrUpdated">-->
+      <!--        Recipients are Saved/Updated Successfully, please do search to preview.-->
+      <!--      </div>-->
     </div>
 
     <div class="row">
@@ -130,7 +117,9 @@
 
           <div class="filter-btn">
             <button class="btn-orange-outline" (click)="exportToExcel()">
-              <div id="filter"></div>
+              <div id="filter">
+                <img [src]="icons[1]" alt="icon" />
+              </div>
               Export Recipients Data
             </button>
           </div>
@@ -138,19 +127,25 @@
           <div class="filter-action">
             <button class="btn-orange-outline" (click)="generateCertificate()">
               <!--               [disabled]="usersForm.controls.allUsers.invalid"-->
-              <div id="certificate"></div>
+              <div id="certificate">
+                <img [src]="icons[2]" alt="icon" />
+              </div>
               Generate Certificate
             </button>
 
             <button class="btn-orange-outline" (click)="addTag()">
-              <div id="tag"></div>
+              <div id="tag">
+                <img [src]="icons[3]" alt="icon" />
+              </div>
               Add
               Tag
             </button>
 
             <button class="btn-orange-outline" (click)="sendEmail()">
               <!--              [disabled]="usersForm.controls.allUsers.invalid" -->
-              <div id="email"></div>
+              <div id="email">
+                <img [src]="icons[4]" alt="icon" />
+              </div>
               Send Email
             </button>
           </div>
@@ -160,22 +155,22 @@
 
         <div *ngIf="showNewRecipients" class="table-container">
           <table mat-table formArrayName="allUsers" [dataSource]="dataSource"
-                 class="table table-bordered table-rounded">
+            class="table table-bordered table-rounded">
 
             <!-- Checkbox Column -->
             <ng-container matColumnDef="select">
 
               <th mat-header-cell *matHeaderCellDef>
                 <mat-checkbox (change)="$event ? masterToggle() : null"
-                              [checked]="selection.hasValue() && isAllSelected()"
-                              [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
+                  [checked]="selection.hasValue() && isAllSelected()"
+                  [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
                 </mat-checkbox>
               </th>
 
               <td mat-cell *matCellDef="let row; let rowIndex = index" [formGroupName]="rowIndex"
-                  (click)="$event.stopPropagation()">
+                (click)="$event.stopPropagation()">
                 <mat-checkbox formControlName="checkBox" (click)="$event.stopPropagation()"
-                              (change)="$event? selection.toggle(row): null" [checked]="selection.isSelected(row)">
+                  (change)="$event? selection.toggle(row): null" [checked]="selection.isSelected(row)">
                 </mat-checkbox>
               </td>
 
@@ -189,7 +184,7 @@
               </th>
 
               <td mat-cell *matCellDef="let element let rowIndex = index" (click)="$event.stopPropagation()"
-                  [formGroupName]="rowIndex">
+                [formGroupName]="rowIndex">
                 {{element.id}}
             </ng-container>
 
@@ -199,7 +194,7 @@
                 <h6>Name</h6>
               </th>
               <td mat-cell *matCellDef="let element; let rowIndex = index" (click)="$event.stopPropagation()"
-                  [formGroupName]="rowIndex">
+                [formGroupName]="rowIndex">
                 {{element.name}}
             </ng-container>
 
@@ -209,7 +204,7 @@
                 <h6> Email</h6>
               </th>
               <td mat-cell *matCellDef="let element; let rowIndex = index" (click)="$event.stopPropagation()"
-                  [formGroupName]="rowIndex">
+                [formGroupName]="rowIndex">
                 {{element.email}}
             </ng-container>
 
@@ -219,10 +214,10 @@
                 <h6>Tags</h6>
               </th>
               <td mat-cell *matCellDef="let element let rowIndex = index" (click)="$event.stopPropagation()"
-                  [formGroupName]="rowIndex">
+                [formGroupName]="rowIndex">
                 <mat-chip-list formArrayName="userTags" #chipList>
                   <mat-chip color="primary" style="margin-top: 10px; "
-                            *ngFor="let tag of element.userTags; let i = index">
+                    *ngFor="let tag of element.userTags; let i = index">
                     {{tag.name}}
 
                   </mat-chip>
@@ -238,10 +233,10 @@
                 <h6>Fields</h6>
               </th>
               <td mat-cell *matCellDef="let element let rowIndex = index" (click)="$event.stopPropagation()"
-                  [formGroupName]="rowIndex">
+                [formGroupName]="rowIndex">
                 <mat-chip-list formArrayName="userTags" #chipList>
                   <mat-chip color="primary" style="margin-top: 10px; height: 100%; "
-                            *ngFor="let field of fields; let i = index">
+                    *ngFor="let field of fields; let i = index">
 
                     {{field.name}}:
                     <div *ngIf="element.fields != null">{{element.fields[field.name]}}</div>
@@ -272,16 +267,14 @@
         </div>
 
         <div *ngIf="showPreview" class="table-container">
-          <table mat-table [dataSource]="previewDataSource"
-                 class="table table-bordered table-rounded">
+          <table mat-table [dataSource]="previewDataSource" class="table table-bordered table-rounded">
 
 
             <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef>
                 <h6>Name</h6>
               </th>
-              <td mat-cell *matCellDef="let element; let rowIndex = index" (click)="$event.stopPropagation()"
-              >
+              <td mat-cell *matCellDef="let element; let rowIndex = index" (click)="$event.stopPropagation()">
                 {{element.name}}
             </ng-container>
 
@@ -290,8 +283,7 @@
               <th mat-header-cell *matHeaderCellDef>
                 <h6> Email</h6>
               </th>
-              <td mat-cell *matCellDef="let element; let rowIndex = index" (click)="$event.stopPropagation()"
-              >
+              <td mat-cell *matCellDef="let element; let rowIndex = index" (click)="$event.stopPropagation()">
                 {{element.email}}
             </ng-container>
 
@@ -300,11 +292,10 @@
               <th mat-header-cell *matHeaderCellDef>
                 <h6>Tags</h6>
               </th>
-              <td mat-cell *matCellDef="let element let rowIndex = index" (click)="$event.stopPropagation()"
-              >
+              <td mat-cell *matCellDef="let element let rowIndex = index" (click)="$event.stopPropagation()">
                 <mat-chip-list #chipList>
                   <mat-chip color="primary" style="margin-top: 10px; "
-                            *ngFor="let tag of element.userTags; let i = index">
+                    *ngFor="let tag of element.userTags; let i = index">
                     {{tag.name}}
 
                   </mat-chip>
@@ -319,11 +310,11 @@
               <th mat-header-cell *matHeaderCellDef>
                 <h6>Fields</h6>
               </th>
-              <td mat-cell *matCellDef="let element let rowIndex = index" (click)="$event.stopPropagation()"
-                  [formGroupName]="rowIndex">
+               <!--formGroupName="rowIndex"-->
+              <td mat-cell *matCellDef="let element let rowIndex = index" (click)="$event.stopPropagation()">
                 <mat-chip-list #chipList>
                   <mat-chip color="primary" style="margin-top: 10px; height: 100%; "
-                            *ngFor="let field of fields; let i = index">
+                    *ngFor="let field of fields; let i = index">
 
                     {{field.name}}:
                     <div *ngIf="element.fields != null">{{element.fields[field.name]}}</div>
@@ -355,9 +346,5 @@
       </div>
       <!--      <mat-paginator [pageSize]="2" [pageSizeOptions]="[2, 4, 6, 10, 20]"></mat-paginator>-->
     </div>
-
-
   </form>
-
 </div>
-
