implemented caching, saved tab current state and many more.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="app-content-wrapper">
-    <mat-progress-bar class="route-change-progress" *ngIf="loading" color="accent" mode="indeterminate">
+    <mat-progress-bar class="route-change-progress" *ngIf="loading" color="warn" mode="indeterminate">
     </mat-progress-bar>
     
     <router-outlet></router-outlet>
