--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,8 +4,8 @@
 
 .route-change-progress {
     width: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 100;
 }
