--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,8 +2,10 @@
 
 <div class="container mt-6">
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-12">
       <app-errors></app-errors>
+    </div>
+    <div class="col-md-4">
       <mat-card>
         <div class="top-left-text">
           <div id="total-recipients">
