--- a/src/app/components/tags/tags.component.html
+++ b/src/app/components/tags/tags.component.html
@@ -21,7 +21,7 @@
       <div class="alert alert-success" role="alert" *ngIf="isFieldAdded">
         Field is added successfully.
       </div>
-      <mat-tab-group class="mat-group-content">
+      <mat-tab-group class="mat-group-content" [selectedIndex]="selectedTab" (selectedTabChange)="handleTabChange($event)">
         <mat-tab label="Fields">
           <form [formGroup]="fieldsForm">
             <div class="table-container">
@@ -47,15 +47,6 @@
 
                 </ng-container>
 
-                <!-- <ng-container matColumnDef="update_field">
-                  <th mat-header-cell *matHeaderCellDef>
-                    <img src="{{assets_loc}}assets/update-tag.svg" />
-                  </th>
-                  <td mat-cell *matCellDef="let element; let rowIndex = index" (click)="$event.stopPropagation()">
-                    <a [routerLink]=""  (click)="updateField(element.id)"  class="view-link">Update</a></td>
-                </ng-container> -->
-
-
                 <ng-container matColumnDef="delete">
                   <th mat-header-cell *matHeaderCellDef>
                     <img src="{{assets_loc}}assets/delete.svg"/>
@@ -69,8 +60,6 @@
                       (confirm)="deleteField(element.id)"
                       class="view-link">Delete</a></td>
                 </ng-container>
-
-
                 <tr mat-header-row *matHeaderRowDef="displayedColumnsFields"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumnsFields;" (click)="clicked(row)">
                 </tr>
@@ -80,18 +69,14 @@
                 (nextPageEvent)="getNextFieldsPage()"
                 (previousPageEvent)="getPreviousFieldsPage()"
               ></app-custom-pagination>
-
-
               <button class="btn-orange-outline" (click)="addField()"><img src="{{assets_loc}}assets/plus.svg"/> Add New
                 Field
               </button>
             </div>
           </form>
-
-
         </mat-tab>
-        <mat-tab label="Tags">
 
+        <mat-tab label="Tags">
           <form [formGroup]="tagsForm">
             <div class="table-container">
               <table mat-table [dataSource]="dataSource" class="mat-elevation-z8"
@@ -122,7 +107,6 @@
                   </th>
                   <td mat-cell *matCellDef="let element let rowIndex = index">
                     {{element.no_of_recipients}} </td>
-
                 </ng-container>
 
 
@@ -159,8 +143,8 @@
       </mat-tab-group>
     </div>
   </div>
-
 </div>
+
 <div class="loading-indicator">
   <mat-spinner *ngIf="loader" mode="indeterminate"></mat-spinner>
 </div>
