Done home component UI

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,48 +1,68 @@
 mat-card {
-  height: 12rem;
-  border-radius: 10px;
-
+  padding: 35px;
+  border-radius: 5px;
+  box-shadow: 10px 10px 15px #00000020 !important;
+  -o-box-shadow: 10px 10px 15px #00000020 !important;
+  -moz-box-shadow: 10px 10px 15px #00000020 !important;
+  -webkit-box-shadow: 10px 10px 15px #00000020 !important;
+  font-family: 'Signika', sans-serif !important;
 }
 
 .card-text {
-  text-align: center;
-  font-weight: 500;
+  text-align: left;
+  font-weight: 300;
+  color: #707070;
+  margin-bottom: 75px;
 }
 
 .number-text {
-  padding: 1rem 0;
-  border-bottom: 1px solid #eee;
-  border-width: 100%;
-  font-size: 3rem;
-  font-weight: 700;
-  margin-bottom: 1rem;
+  font-size:3.8rem;
+  font-weight: 300;
   color: orangered;
+  line-height: 4rem;
 }
 
-.top-right-text {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 100px;
+.icon-area {
   text-align: right;
-  color: #01288F;
-  padding: 1rem 1rem;
-  font-weight: 700;
+  color: #05288545;
+  font-size: 40px;
 }
 
-.top-left-text {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100px;
-  text-align: left;
-  color: red;
-  padding: 1rem 1rem;
-  font-weight: 500;
-
+.icon-area.text {
+  text-align: right;
+  color: #07C735;
+  font-size: 30px;
+  font-weight: 300;
+}
+.icon-area.red {
+  color: #FF0000;
 }
 
-.row {
-  margin-bottom: 2.5rem;
 
+
+.col-md-4{
+   margin-bottom: 2.5rem;
+}
+
+.alert-secondary{
+   background: #E6E6ED;
+   font-size: 18px;
+   font-weight: 400;
+   border: 0;
+   padding-top: 25px;
+   padding-bottom: 25px;
+}
+.alert-secondary svg{
+  margin-right: 10px;
+  margin-top: -4px;
+}
+.alert-secondary a{
+  color: orangered;
+  display: inline-block;
+  margin-left: 10px;
+}
+.alert-secondary .close{
+   color: #052885;
+   font-weight: 500;
+   font-size: 18px;
 }
