--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/@angular/material/prebuilt-themes/indigo-pink.css";
 @import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
+@import url('https://fonts.googleapis.com/css2?family=Signika:wght@300;400;500;600;700&display=swap');
+
+body{
+  background: #F0F0F7;
+  font-family: 'Signika', sans-serif;
+}
+
+.container{
+  max-width: 1410px;
+}
 
 .nav {
     margin-top: 0px;
