increased otp field.

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -42,6 +42,10 @@
                                     placeholder="--" maxlength="1" (keyup)="keyUpEvent($event, 2)" />
                                 <input #formRow type="text" formControlName="input4" class="form-control otp-field"
                                     placeholder="--" maxlength="1" (keyup)="keyUpEvent($event, 3)" />
+                                <input #formRow type="text" formControlName="input5" class="form-control otp-field"
+                                    placeholder="--" maxlength="1" (keyup)="keyUpEvent($event, 4)" />
+                                <input #formRow type="text" formControlName="input6" class="form-control otp-field"
+                                    placeholder="--" maxlength="1" (keyup)="keyUpEvent($event, 5)" />
                             </div>
                         </div>
 
