--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -23,8 +23,8 @@
 
 .otp-container {
     display: grid;
-    grid-template-columns: 50px 50px 50px 50px;
-    gap: 15px;
+    grid-template-columns: repeat(6, minmax(40px, 50px));
+    gap: 10px;
     align-items: center;
     place-items: center;
 }
