--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <!--<app-navbar></app-navbar>-->
 
 <div class="container mt-6">
-  <div class="alert alert-secondary mb-5" role="alert">
+  <div class="alert alert-secondary mb-5" role="alert" #alert>
      <div class="row align-items-center">
         <div class="col">
           <svg xmlns="http://www.w3.org/2000/svg" width="20.289" height="20.289" viewBox="0 0 20.289 20.289">
@@ -10,7 +10,7 @@
           There are 48 recipients who have not been informed of their newly issued certificates, inform them. <a href="#">Send Emails Now</a>
         </div>
         <div class="col-auto">
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="alert.remove()">
             <span aria-hidden="true">Dismiss</span>
           </button>
         </div>
