--- a/src/app/components/recipients/recipients.component.css
+++ b/src/app/components/recipients/recipients.component.css
@@ -30,7 +30,7 @@
 }
 
 a.view-link {
-  color: #01288F;
+  color: #FF3A00 !important;
   font-weight: 500;
   text-decoration: none;
 }
@@ -101,5 +101,5 @@ a.view-link {
   margin-left: auto;
   padding: .3rem .5rem;
     min-width: 5rem;
-    color: white;
+    color: white !important;
 }
