--- a/src/app/components/tags/tags.component.html
+++ b/src/app/components/tags/tags.component.html
@@ -86,23 +86,29 @@
         <mat-tab-group class="mat-group-content" [selectedIndex]="selectedTab" (selectedTabChange)="handleTabChange($event)">
           <mat-tab label="Tags">
             <button class="btn-orange-outline add_button"
-            (click)="addTag()"> <i class="fas fa-plus"></i> Add New Tag
+            (click)="addTag()"> <i class="fas fa-plus"></i> Create New Tag
             </button>
             <form [formGroup]="tagsForm">
               <div class="table-container">
-                <table mat-table [dataSource]="dataSource" class="mat-elevation-z8"
-                      class="table table-bordered table-rounded">
-                  <ng-container matColumnDef="id">
-                    <th mat-header-cell *matHeaderCellDef>
-                      <h6>Id</h6>
-                    </th>
-                    <td mat-cell *matCellDef="let element let rowIndex = index">{{element.id}}</td>
-                  </ng-container>
+                <table mat-table [dataSource]="dataSource" class="table hoverEffect table-header table-bordered table-rounded">
                   <ng-container matColumnDef="name">
                     <th mat-header-cell *matHeaderCellDef>
                       <h6>Tags</h6>
                     </th>
                     <td mat-cell *matCellDef="let element let rowIndex = index">{{element.name}}</td>
+                  </ng-container>
+                  <ng-container matColumnDef="no_of_recipients">
+                    <th mat-header-cell *matHeaderCellDef>
+                      <h6>Recipients</h6>
+                    </th>
+                    <td mat-cell *matCellDef="let element let rowIndex = index">
+                      {{element.no_of_recipients}} </td>
+                  </ng-container>
+                  <ng-container matColumnDef="last_used">
+                    <th mat-header-cell *matHeaderCellDef>
+                      <h6>Last Used</h6>
+                    </th>
+                    <td mat-cell *matCellDef="let element let rowIndex = index">Today</td>
                   </ng-container>
                   <ng-container matColumnDef="created_on">
                     <th mat-header-cell *matHeaderCellDef>
@@ -110,32 +116,24 @@
                     </th>
                     <td mat-cell *matCellDef="let element let rowIndex = index">
                       {{element.created_at}} </td>
-
-                  </ng-container>
-                  <ng-container matColumnDef="no_of_recipients">
-                    <th mat-header-cell *matHeaderCellDef>
-                      <h6>No of Recipients</h6>
-                    </th>
-                    <td mat-cell *matCellDef="let element let rowIndex = index">
-                      {{element.no_of_recipients}} </td>
                   </ng-container>
 
+                  <ng-container  matColumnDef="view_users">
+                    <th mat-header-cell *matHeaderCellDef>
+                      
+                    </th>
+                    <td mat-cell class="hover_details" *matCellDef="let element">
+                        <ul class="actiion_list">
+                          <li>
+                            <a [routerLink]="" (click)="updateTag(element.id)" class="btn-orange-outline-border">Update</a>
+                          </li>
+                          <li>
+                            <a (click)="loader = true" [routerLink]="'/Recipients/'+element.id" class="btn-orange-outline-border">View Recipients</a>
+                          </li>
+                        </ul>
+                    </td>
+                  </ng-container>
 
-                  <ng-container matColumnDef="update_tag">
-                    <th mat-header-cell *matHeaderCellDef>
-                      <img src="{{assets_loc}}assets/update-tag.svg"/>
-                    </th>
-                    <td mat-cell *matCellDef="let element; let rowIndex = index" (click)="$event.stopPropagation()">
-                      <a [routerLink]="" (click)="updateTag(element.id)" class="view-link">Update</a>
-                  </ng-container>
-                  <ng-container matColumnDef="view_users">
-                    <th mat-header-cell *matHeaderCellDef>
-                      <img src="{{assets_loc}}assets/view-users.png"/>
-                    </th>
-                    <td mat-cell *matCellDef="let element; let rowIndex = index" (click)="$event.stopPropagation()">
-                      <a (click)="loader = true" [routerLink]="'/Recipients/'+element.id" class="view-link">View
-                        Recipients</a>
-                  </ng-container>
                   <tr mat-header-row *matHeaderRowDef="displayedColumnsTags"></tr>
                   <tr mat-row *matRowDef="let row; columns: displayedColumnsTags;" (click)="clicked(row)">
                   </tr>
@@ -149,19 +147,11 @@
             </form>
           </mat-tab>
           <mat-tab label="Fields">
-            <button class="btn-orange-outline add_button" (click)="addField()"><i class="fas fa-plus"></i> Add New
-              Field
+            <button class="btn-orange-outline add_button" (click)="addField()"><i class="fas fa-plus"></i>      Create New Field
             </button>
             <form [formGroup]="fieldsForm">
               <div class="table-container">
-                <table mat-table [dataSource]="fieldsDataSource" class="mat-elevation-z8"
-                      class="table table-bordered table-rounded">
-                  <ng-container matColumnDef="id">
-                    <th mat-header-cell *matHeaderCellDef>
-                      <h6>Id</h6>
-                    </th>
-                    <td mat-cell *matCellDef="let element let rowIndex = index">{{element.id}}</td>
-                  </ng-container>
+                <table mat-table [dataSource]="fieldsDataSource" class="table hoverEffect table-header table-bordered table-rounded">
                   <ng-container matColumnDef="fields">
                     <th mat-header-cell *matHeaderCellDef>
                       <h6>Fields</h6>
@@ -175,20 +165,42 @@
                     <td mat-cell *matCellDef="let element let rowIndex = index">{{element.created_at}}</td>
 
                   </ng-container>
-
-                  <ng-container matColumnDef="delete">
+                  <ng-container matColumnDef="recipients_filled">
                     <th mat-header-cell *matHeaderCellDef>
-                      <img src="{{assets_loc}}assets/delete.svg"/>
+                      <h6>Recipients filled</h6>
                     </th>
-                    <td mat-cell *matCellDef="let element; let rowIndex = index" (click)="$event.stopPropagation()">
-                      <a
-                        mwlConfirmationPopover
-                        [popoverTitle]="fieldDeletePopoverTitle"
-                        [popoverMessage]="fieldDeletePopoverMessage"
-                        placement="left"
-                        (confirm)="deleteField(element.id)"
-                        class="view-link">Delete</a></td>
+                    <td mat-cell *matCellDef="let element let rowIndex = index"> 25</td>
                   </ng-container>
+
+                  <ng-container matColumnDef="recipients_empty">
+                    <th mat-header-cell *matHeaderCellDef>
+                      <h6>Recipients empty</h6>
+                    </th>
+                    <td mat-cell *matCellDef="let element let rowIndex = index">10</td>
+                  </ng-container>
+
+                  <ng-container matColumnDef="view_users">
+                    <th mat-header-cell *matHeaderCellDef>
+                      
+                    </th>
+                    <td mat-cell class="hover_details" *matCellDef="let element; let rowIndex = index" (click)="$event.stopPropagation()">
+                          <ul class="actiion_list">
+                            <li>
+                              <a
+                                mwlConfirmationPopover
+                                [popoverTitle]="fieldDeletePopoverTitle"
+                                [popoverMessage]="fieldDeletePopoverMessage"
+                                placement="left"
+                                (confirm)="deleteField(element.id)"
+                                class="btn-orange-outline-border">Delete</a>
+                            </li>
+                            <li>
+                              <a class="btn-orange-outline-border">Update</a>
+                            </li>
+                          </ul>
+                      </td>
+                  </ng-container>
+
                   <tr mat-header-row *matHeaderRowDef="displayedColumnsFields"></tr>
                   <tr mat-row *matRowDef="let row; columns: displayedColumnsFields;" (click)="clicked(row)">
                   </tr>
